--- a/Parts/17EconomischeGroei.tex
+++ b/Parts/17EconomischeGroei.tex
@@ -24,10 +24,30 @@ Als we de veronderstelling maken dat iedereen in de bevolking werkt, kunnen we h
 \begin{equation}
     q_t = \frac{Q_t}{L_t} = \frac{K_t^\alpha \times L_t^{1-\alpha}}{L_t} = K_t^\alpha \times L_t^{-\alpha} = \left( \frac{K_t}{L_t} \right)^\alpha = k_t^\alpha
 \end{equation}
-met $q_t$ de output per capita en $k_t$ het kapitaal per capita, of de kapitaalintensiteit. Bijgevolg hangt het BBP per capita dus af van de kapitaalintensiteit.
+met $q_t$ de output per capita en $k_t$ het kapitaal per capita, of de \textit{kapitaalintensiteit}. Bijgevolg hangt het BBP per capita dus af van de kapitaalintensiteit. Het laten toenemen van $k$ kan dus leiden tot een verhoging van het BBP per capita, maar met afnemende meeropbrengsten want $\alpha < 1$.
+
+We kunnen deze relatie omzetten in groeivoeten:
+\begin{align*}
+  \text{ln } q_t &= \alpha \times \text{ ln } k_t \\
+  \Leftrightarrow \frac{d \text{ ln } q_t}{d \text{ t}} &= \alpha \times \frac{d \text{ ln } k_t}{d \text{ t}} \\
+  \Leftrightarrow g_t^q &= \alpha \times g_t^q
+\end{align*}
+
+Om de blijvende welvaart te kunnen verklaren moeten we dus naar technologische vooruitgang kijken:
+\begin{equation}
+  g^q = g^A +\alpha g^k
+\end{equation}
+
+\subsubsection{Growth Accounting}
+=een techniek om groei doorheen de tijd in een land, of verschillen in groei tussen verschillende landen te verklaren. Deze techniek splitst groei van BBP per capita op in bewegingen langsheen de productiefunctie(verandering kapitaal) en verschuivingen van de productiefunctie (verandering technologie).
+
+Men kan dan gaan kijken wat het deel in de groei is dat niet kan toegewezen worden aan de verandering van kapitaal. Deze groei is het Solow-residu:
+\begin{equation}
+  g^A = g^q_t - \alpha q^k_t
+\end{equation}
 
 \subsection{Endogene Technologische Vooruitgang}
+Het Romer model is gebaseerd op het Solow model, maar zal verklaren waar de technologische vooruitgang vandaan komt. Volgens Romer is technologische vooruitgang een onderdeel van het economisch gebeuren zelf. Een deel van de productiefactoren wordt ingezet voor de productie van idee\"en. Idee\"en zijn echter niet rivaal of uitsluitbaar, en lijken bijgevolg op publieke goederen. Om vrijbuitersgedrag tegen te gaan moet de overheid ingrijpen via \textit{patenten of octrooien}.
 
 \subsection{De Rol van Instituties}
-
-\subsection{Groei en Verdeling van de Welvaart}
+Gedrag van economische agenten is mee bepaald door instituties. Deze stellen de regels voor waarbinnen economische transacties plaatsvinden. Deze regels leiden tot meer voorspelbaarheid en samenwerking, wat noodzakelijk is voor het tot stand komen van transacties.
