--- a/main.tex
+++ b/main.tex
@@ -124,6 +124,7 @@
 \input{Parts/15DeNationaleRekeningen.tex}
 \input{Parts/16HetBBPDoorheenDeTijdEnRuimte.tex}
 \input{Parts/17EconomischeGroei.tex}
+\input{Parts/18GeldEnHetBankwezen.tex}
 
 
 \end{document}
