--- a/Parts/18GeldEnHetBankwezen.tex
+++ b/Parts/18GeldEnHetBankwezen.tex
@@ -131,4 +131,4 @@ Je kan zien dat we veronderstellen dat het geldaanbod perfect inelastisch is (de
 
 \subsection{Taylor regel}
 \label{sub:Taylor regel}
-zie slides & boek
+zie slides \& boek
