--- a/main.tex
+++ b/main.tex
@@ -125,6 +125,7 @@
 \input{Parts/16HetBBPDoorheenDeTijdEnRuimte.tex}
 \input{Parts/17EconomischeGroei.tex}
 \input{Parts/18GeldEnHetBankwezen.tex}
+\input{Parts/19FinancieleMarkten.tex}
 
 
 \end{document}
