--- a/Parts/19FinancieleMarkten.tex
+++ b/Parts/19FinancieleMarkten.tex
@@ -38,7 +38,9 @@ Bij een \textit{perpetu\"iteit} wordt de hoofdsom nooit uitbetaald en wordt op e
 
 \subsection{De Aandelenmarkt}
 \label{sub:De Aandelenmarkt}
-De aandelenmarkt werkt gelijkaardig. Hier spelen echter de verwachte dividenten ($D_t^e$) en de risicofactor ($\rho$) een rol. De prijs is dan:
+De aandelenmarkt werkt gelijkaardig. We berekenen de prijs op basis van: de verwachte dividenten ($D_t^e$), de risicofactor ($\rho$) een rol en de interestvoetevolutie. Deze noemen we de \textit{fundamentals}. De prijs is dan:
 \begin{equation}
   P = \frac{D_1^e}{(1 + i + \rho)^1} +  \frac{D_2^e}{(1 + i + \rho)^2} + \dots
 \end{equation}
+
+Verdisconteren gebeurt dus op basis van de marktrente en risicopremie. Deze laatste is zeer moeilijk in te schatten. Het is wel eenvoudig in te zien dat de waarde van een aandeel stijgt als $i\downarrow$.
