--- a/main.tex
+++ b/main.tex
@@ -126,6 +126,7 @@
 \input{Parts/17EconomischeGroei.tex}
 \input{Parts/18GeldEnHetBankwezen.tex}
 \input{Parts/19FinancieleMarkten.tex}
+\input{Parts/20DeVraagzijde.tex}
 
 
 \end{document}
