--- a/main.tex
+++ b/main.tex
@@ -127,6 +127,7 @@
 \input{Parts/18GeldEnHetBankwezen.tex}
 \input{Parts/19FinancieleMarkten.tex}
 \input{Parts/20DeVraagzijde.tex}
+\input{Parts/21ISLM.tex}
 
 
 \end{document}
