--- a/main.tex
+++ b/main.tex
@@ -128,6 +128,8 @@
 \input{Parts/19FinancieleMarkten.tex}
 \input{Parts/20DeVraagzijde.tex}
 \input{Parts/21ISLM.tex}
+\input{Parts/22Wisselkoersen.tex}
+\input{Parts/23AgregatieveAanbod.tex}
 
 
 \end{document}
