add AV to chapter 21

--- a/Parts/21ISLM.tex
+++ b/Parts/21ISLM.tex
@@ -31,3 +31,13 @@ Het is eenvoudig in te zien dat we beide vergelijkingen kunnen samenbrengen in \
   \item[Liquidity trap]: In werkelijkheid zal de LM-curve wellicht geen rechte zijn, maar eerder zeer vlak worden als $i$ laag staat. Dit wil zeggen dat als je ``in de liquidity trap'' zit, een monetair beleid voeren geen grote impact zal hebben op $Q$.
   \item[Policy mix]: Zie voorbeelden waarom het belangrijk is monetair en budgettair beleid op elkaar af te stemmen. (Bill Clinton, Duitse eenmaking en het huidig beleid)
 \end{description}
+
+\subsection{De Agregatieve Vraag}
+De AV-curve is eenvoudig af te leiden uit het IS-LM schema. De AV-curve geeft weer wat de $Q$ is voor een bijhorend prijsniveau. We weten al dat $Q$ iets is dat het IS-LM schema bepaald, maar ook $P$ zit hierin vervat. Meer bepaald in de LM-curve. We leiden AV dus af door bij een constante IS, de LM curven te laten verschuiven door $P$ aan te passen. Dit geeft weer wat $Q$ is bij een bepaalde $P$. Zie ook figuur~\ref{fig:opstellenAV}.
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.4]{Images/white.png}
+	\caption{Opstellen van AV (fig 21.11 boek)}
+	\label{fig:opstellenAV}
+\end{figure}
